name:                tanakh-jp
version:             0.1.0.0
synopsis:            http://tanakh.jp/
description:         http://tanakh.jp/
license:             BSD3
license-file:        LICENSE
author:              Hideyuki Tanaka
maintainer:          tanaka.hideyuki@gmail.com
copyright:           (c) Hideyuki Tanaka
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tanakh-jp
  main-is:             site.hs
  build-depends:       base
                     , hakyll >=4.6
                     , process >= 1.2
                     , binary
  default-language:    Haskell2010

executable deploy
  main-is:             deploy.hs
  build-depends:       base
                     , shelly >=1.5
                     , text >= 1.2
  default-language:    Haskell2010
